@@ -1,16 +1,19 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/scale-size.r
 \name{scale_size}
+\alias{scale_radius}
 \alias{scale_size}
 \alias{scale_size_continuous}
 \alias{scale_size_discrete}
-\title{Size scale.}
+\title{Scale size (area or radius).}
 \usage{
 scale_size_continuous(..., range = c(1, 6))
 
+scale_radius(..., range = c(1, 6))
+
 scale_size(..., range = c(1, 6))
 
-scale_size_discrete(..., range = c(1, 6))
+scale_size_discrete(..., range = c(2, 6))
 }
 \arguments{
 \item{...}{common continuous scale parameters: \code{name}, \code{breaks},
@@ -21,29 +24,39 @@ scale_size_discrete(..., range = c(1, 6))
 maximum size of the plotting symbol after transformation.}
 }
 \description{
-Size scale.
+\code{scale_size} scales area, \code{scale_radius} scales radius. The size
+aesthetic is most commonly used for points and text, and humans percieve
+the area of points (not their radius), so this provides for optimal
+perception.
 }
 \examples{
 \donttest{
-(p <- qplot(mpg, cyl, data=mtcars, size=cyl))
+p <- ggplot(mtcars, aes(mpg, cyl, size = cyl)) +
+   geom_point()
+p
 p + scale_size("cylinders")
 p + scale_size("number\\nof\\ncylinders")
 
 p + scale_size(range = c(0, 10))
 p + scale_size(range = c(1, 2))
 
-# Map area, instead of width/radius
-# Perceptually, this is a little better
+# If you want zero value to have zero size, use scale_size_area:
 p + scale_size_area()
-p + scale_size_area(max_size = 25)
 
-# Also works with factors, but not a terribly good
+# You can map size to a factor, but it's not a terribly good
 # idea, unless your factor is ordered, as in this example
-qplot(mpg, cyl, data=mtcars, size=factor(cyl))
+ggplot(mtcars, aes(mpg, cyl, size = factor(cyl))) +
+  geom_point()
 
 # To control the size mapping for discrete variable, use
 # scale_size_manual:
-last_plot() + scale_size_manual(values=c(2,4,6))
+ggplot(mtcars, aes(mpg, cyl, size = factor(cyl))) +
+  geom_point() +
+  scale_size_manual(values = c(2, 4, 6))
 }
+}
+\seealso{
+\code{\link{scale_size_area}} if you want 0 values to be mapped
+  to points with size 0.
 }
 
