@@ -2,7 +2,7 @@
 % Please edit documentation in R/scale-size.r
 \name{scale_size_area}
 \alias{scale_size_area}
-\title{Scale area instead of radius, for size.}
+\title{Scale area, with fixed 0.}
 \usage{
 scale_size_area(..., max_size = 6)
 }
@@ -13,8 +13,8 @@ to control name, limits, breaks, labels and so forth.}
 \item{max_size}{Size of largest points.}
 }
 \description{
-When \code{scale_size_area} is used, the default behavior is to scale the
-area of points to be proportional to the value.
+This scale is subtly different to \code{scale_area}: it ensures that a
+value of zero is always mapped to size 0.
 }
 \details{
 Note that this controls the size scale, so it will also control
